--- a/css/style.css
+++ b/css/style.css
@@ -1074,3 +1074,41 @@
     font-size: 64px;
     color: var(--neon-green);
 }
+
+/*========== PRELOADER =========*/
+
+.preloader {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: #131313;
+    z-index: 9999;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.preloader__spinner {
+    border: 8px solid var(--neon-green);
+    border-left-color: #333;
+    border-radius: 50%;
+    width: 100px;
+    height: 100px;
+    animation: spin 1s linear infinite;
+}
+
+@keyframes spin {
+    0% {
+        transform: rotate(0deg);
+    }
+
+    100% {
+        transform: rotate(360deg);
+    }
+}
+
+body.loaded .preloader {
+    display: none;
+}
