--- a/css/media.css
+++ b/css/media.css
@@ -17,6 +17,14 @@
     .error__subtitle {
         font-size: 58px;
     }
+
+    .projects__preview-portfolio {
+        min-width: 765px;
+    }
+
+    .projects__preview-portfolio img {
+        min-width: 665px;
+    }
 }
 
 @media (max-width: 1280px) {
@@ -39,6 +47,17 @@
     .error__subtitle {
         font-size: 46px;
     }
+
+    .projects__preview-portfolio {
+         min-width: 475px;
+         min-height: 245px;
+    }
+
+    .projects__preview-portfolio img {
+        min-width: 364px;
+    }
+
+
 }
 
 @media (max-width: 1024px) {
@@ -123,6 +142,11 @@
     .error__subtitle {
         font-size: 37px;
     }
+
+    .projects__preview-content {
+        flex-direction: column;
+        align-items: center;
+    }
 }
 
 @media (max-width: 768px) {
@@ -161,7 +185,7 @@
     }
 
     .projects__block-img {
-        position: inherit;
+        position: relative;
         padding-top: 20px;
         max-width: 100%;
         height: auto;
@@ -221,6 +245,14 @@
 
     .error__subtitle {
         font-size: 24px;
+    }
+
+    .projects__card-text {
+        margin-bottom: 30px;
+    }
+
+    .projects__preview-link {
+        padding: 17px 40px;
     }
 }
 
