--- a/css/style.css
+++ b/css/style.css
@@ -108,9 +108,6 @@
 
 /*========== LANGUAGE =========*/
 
-.header__block-language {
-}
-
 .header__language-select {
     font-family: var(--font-family);
     font-weight: 700;
@@ -190,8 +187,7 @@
     padding: 100px 20px 20px 20px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
     transform: translateX(-200px);
-    z-index: 1005;
-    overflow-y: auto;
+    overflow: hidden;
 }
 
 .menu.active {
