--- a/css/style.css
+++ b/css/style.css
@@ -20,7 +20,7 @@
 
 .header__block {
     display: flex;
-    justify-content: center;
+    justify-content: space-between;
     align-items: center;
     padding: 40px 0;
 }
@@ -118,6 +118,7 @@
     color: var(--white);
     outline: none;
     cursor: url(../img/cursor.svg), auto;
+    z-index: 1003;
 }
 
 .header__language-lang {
@@ -289,6 +290,11 @@
     font-size: 339px;
     line-height: 88%;
     color: var(--neon-green);
+}
+
+.hero__title-ru {
+    font-size: 230px;
+    height: 220px;
 }
 
 .hero__descr {
@@ -702,6 +708,10 @@
     font-size: 141px;
     line-height: 88%;
     color: var(--black-blue);
+}
+
+.contacts__title-ru {
+    font-size: 110px;
 }
 
 .contacts__subtitle {
