--- a/css/media.css
+++ b/css/media.css
@@ -316,6 +316,10 @@
         margin-bottom: 30px;
     }
 
+    .about__page-title {
+        font-size: 50px;
+    }
+
     .about__page-content--descr {
         font-size: 14px;
     }
@@ -337,11 +341,19 @@
     }
 
     .error__title {
-        font-size: 60px;
+        font-size: 50px;
     }
 
     .error__subtitle {
         font-size: 24px;
+    }
+
+    .projects__recent-block--ro {
+        padding-right: 50px;
+    }
+
+    .projects__title-ro {
+        font-size: 40px;
     }
 
     .projects__card-text {
@@ -377,8 +389,13 @@
     }
 
     .hero__title-ru {
-        height: 55px;
+        height: 40px;
         font-size: 53px;
+    }
+
+    .hero__title-ro {
+        height: 110px;
+        font-size: 145px;
     }
 
     .hero__subtitle {
